classDiagram
    class AudioItem {
        <<abstract>>
        #title: string
        #author: string
        #duration: number
        +durationInSeconds() number
        +formatDuration() string
        +getInfo()* string
        +calculateSize()* number
    }

    class Track {
        -genre: string
        +getInfo() string
        +calculateSize() number
    }

    class Podcast {
        -_progress: number
        +progress() number
        +progress(value: number) void
        +getInfo() string
        +calculateSize() number
    }

    class Library {
        -items: AudioItem[]
        +count() number
        +add(item: AudioItem) void
        +remove(index: number) void
        +getAll() AudioItem[]
        +totalDuration() number
        +totalSize() number
    }

    AudioItem <|-- Track
    AudioItem <|-- Podcast
    Library o-- AudioItem : obsahuje
